# cf-token-metadata-registry

./: .env  .env.preprod  .env.preview  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose-simple.yml  docker-compose.yml  pom.xml  release-please-config.json
adr/: 000-overview.md  001-multi-module-maven-structure.md  002-spring-boot-virtual-threads-jdk25.md  003-graalvm-native-image-support.md  004-cip26-cip68-dual-standard.md  005-postgresql-jsonb-metadata.md  006-flyway-database-migrations.md  007-yaci-store-onchain-indexing.md  008-jgit-git-operations.md  009-incremental-github-sync.md  010-v2-api-query-priority.md  011-health-check-groups-kubernetes.md  012-prometheus-business-metrics.md  013-structured-logging-ecs.md  014-release-please-versioning.md  015-v2-api-extensions-model.md  016-cip113-programmable-tokens.md  017-thin-wrapper-over-assets-ext.md  017-v2-policy-api.md
api/: Dockerfile  Dockerfile.jvm  Dockerfile.native  compose.dockerfile  pom.xml  run_backend.sh  run_locally.sh
cli/: pom.xml
common/: pom.xml
docs/: index.html
gitsync/: Dockerfile.sync-cron  Dockerfile.sync-once  daos.py  populate_data.py  requirements.txt  sync_from_github.sh
integration-test/: pom.xml
java/: pom.xml
job/: Dockerfile  pom.xml
regression-tests/: README.md  pyproject.toml
regression-tests/mainnet/: conftest.py  pytest.ini  test_v1_batch_query.py  test_v1_get_property.py  test_v1_get_subject.py
regression-tests/mainnet/fixtures/: cip26_tokens.json  cip68_tokens.json
spec/: api.yaml
tests/: README.md  (+1 more)
(+587 files in other folders)
